# zvm

./: .gitignore  Cargo.toml  LICENSE  README.md  extract-jvm  goodfile
references/java/: arithmetic.java  call_in_call.java  chars.java  collections.java  exception.java  fibonacci.java  fibonacci2.java  integercompare.java  main.java  nested.java  nonmain.java  print_dummy.java
references/scala/: hello.scala
src/: class_info.rs  lib.rs  main.rs  virtual_machine.rs
src/class_file/: attribute.rs  instruction.rs  mod.rs  read.rs
src/class_file/unvalidated/: attribute.rs  class.rs  constant.rs  field.rs  instruction.rs  method.rs  mod.rs  read.rs
src/class_file/validated/: constant.rs  field.rs  instruction.rs  method.rs  mod.rs
src/compiler/: mod.rs
src/virtual_machine/: zvm.rs
src/virtual_machine/jvm/: synthetic.rs
src/vm/: mod.rs  virtual_machine.rs
zvm-cli/: .gitignore  Cargo.toml
zvm-cli/src/: main.rs
zvm-stdlib/: Cargo.toml
zvm-tools/: Cargo.toml
zvm-tools/src/: class_info.rs
