[package]
name = "zvm"
version = "0.1.0"
authors = ["iximeow <me@iximeow.net>"]
edition = "2018"
description = "zvm goes zoom zoom"

[lib]

[workspace]
members = [
    "zvm-cli",
    "zvm-stdlib",
    "zvm-tools"
]

[dependencies]
byteorder = "1.3.2"
cranelift-codegen = "*"
cranelift-frontend = "*"
yaxpeax-x86 = "*"
yaxpeax-arch = "*"
